--- a/apps/index.html
+++ b/apps/index.html
@@ -8,21 +8,21 @@
 
 <header>
   <h1>Apps</h1>
-</header>
-<section>
-  <img src="img/5980356ca211d1b4.png">
-  <intro>
+
+  <abstract>
     <p>Esta práctica te enseña cómo crear tu primera aplicación para Android. 
       Aprenderás cómo <strong>crear </strong>un proyecto de Android con Android Studio, y <strong>ejecutar </strong>una versión depurable de la aplicación.</p>
-  </intro>
+  
+    <outcome>
+      <p>Desarrollaremos una App que consiste en un contador de clics:</p>
+      <img src="img/16d3b5773c10a06e.gif">
+      <a href="https://github.com/gerardfp/apps" target="_blank">https://github.com/gerardfp/apps</a>  
+    </outcome>
+  </abstract>
 
-  <outcome>
-    <p>Desarrollaremos una App que consiste en un contador de clics:</p>
-    <img src="img/16d3b5773c10a06e.gif">
-    <a href="https://github.com/gerardfp/apps" target="_blank">https://github.com/gerardfp/apps</a>  
-  </outcome>
+</header>
 
-</section>
+  
 
 <section>
   <h2>Obtener Android Studio</h2>
@@ -210,7 +210,7 @@
   
   <optional>
     <p>Si no tienes ningún emulador creado ve a 
-      <strong>AVD Manager</strong> y crea uno:</p>
+      <menuoption>AVD Manager</menuoption> y crea uno:</p>
     <img src="img/ce7aded8a8ab3dfc.png">
     <img src="img/48f4783707b99677.png">
     <p>Selecciona el Hardware y la versión de Android que desees.</p>
