--- a/einesgoogle/index.html
+++ b/einesgoogle/index.html
@@ -6,9 +6,8 @@
 
 <header>
     <h1>Eines Google</h1>
-</header>
-<section>
-    <resum>
+
+    <abstract>
         <p>En aquesta pràctica aprendrem a utilizar diverses eines web
             proporcionades per Google.
         </p>
@@ -16,52 +15,53 @@
         <p>La pràctica es realitzarà en grups, aprofitant les possiblitats de 
             treball colaboratiu que ofereixen aquestes eines.
         </p>
+    </abstract>
+</header>
 
-        <p>La pràctica consisteix a confeccionar una enquesta orientada
-            als desenvolupadors web, que permeti obtenir una visió
-            de com aprenen, quines eines utilitzen, i quins objectius tenen.
-        </p>
+<section>
+    <p>La pràctica consisteix a confeccionar una enquesta orientada
+        als desenvolupadors web, que permeti obtenir una visió
+        de com aprenen, quines eines utilitzen, i quins objectius tenen.
+    </p>
 
-        
-        <p>Les preguntes de l'enquesta han d'estar relacionades amb els següents punts:</p>
-        <ul>
-            <li>Perfil dels desenvolupadors
-                <ul>
-                    <li>Geografia</li>
-                    <li>Edat</li>
-                    <li>Gènere</li>
-                    <li>Experiència</li>
-                </ul>
-            </li>
-            <li>Tecnologies
-                <ul>
-                    <li>Llenguatges</li>
-                    <li>Frameworks/Llibreries</li>
-                    <li>Editors de codi</li>
-                    <li>Navegadors web</li>
-                    <li>Servidors web</li>
-                    <li>Bases de dades</li>
-                    <li>Sistemes operatius</li>
-                </ul>
-            </li>
-            <li>Aprenentatge
-                <ul>
-                    <li>Objectius</li>
-                    <li>Recursos</li>
-                </ul>
-            </li>
-            <li>Àmbit laboral
-                <ul>
-                    <li>Experiència laboral</li>
-                    <li>Objectius laborals</li>
-                </ul>
-            </li>
-        </ul>
+    <p>Les preguntes de l'enquesta han d'estar relacionades amb els següents punts:</p>
+    <ul>
+        <li>Perfil dels desenvolupadors
+            <ul>
+                <li>Geografia</li>
+                <li>Edat</li>
+                <li>Gènere</li>
+                <li>Experiència</li>
+            </ul>
+        </li>
+        <li>Tecnologies
+            <ul>
+                <li>Llenguatges</li>
+                <li>Frameworks/Llibreries</li>
+                <li>Editors de codi</li>
+                <li>Navegadors web</li>
+                <li>Servidors web</li>
+                <li>Bases de dades</li>
+                <li>Sistemes operatius</li>
+            </ul>
+        </li>
+        <li>Aprenentatge
+            <ul>
+                <li>Objectius</li>
+                <li>Recursos</li>
+            </ul>
+        </li>
+        <li>Àmbit laboral
+            <ul>
+                <li>Experiència laboral</li>
+                <li>Objectius laborals</li>
+            </ul>
+        </li>
+    </ul>
 
-        <p>Aquí teniu un petit exemple que us pot orientar en el vostre treball:
-            <br><a href="https://sites.google.com/view/enquesta-webdevs/">https://sites.google.com/view/enquesta-webdevs/</a>
-        </p>
-    </resum>
+    <p>Aquí teniu un petit exemple que us pot orientar en el vostre treball:
+        <br><a href="https://sites.google.com/view/enquesta-webdevs/">https://sites.google.com/view/enquesta-webdevs/</a>
+    </p>
 </section>
 
 <section>
