--- a/entorndetreball/index.html
+++ b/entorndetreball/index.html
@@ -7,10 +7,7 @@
 <nav></nav>
 <header>
     <h1>Entorn de treball</h1>
-</header>
-
-<section>
-    <resum>
+    <abstract>
         <p>En aquesta pràctica aprendrem a instal·lar i utilitzar les eines necessàries per al desenvolupament web.</p>
         <p>A l'àmbit professional s'utilitzen una àmplia varietat d'eines, però nosaltres començarem amb les mínimes
         necessàries que necessitarem per a aquest curs:</p>
@@ -20,24 +17,22 @@
             <li>Servidor web
             <li>Repositori de codi
         </ul>
-    </resum>
-
-    <tldr>
-        Començarem la pràctica instal·lant l'editor de text 
-        <strong>Visual Studio Code</strong>, 
-        que ens permetrà editar el codi HTML, i també interactuar amb la 
-        plataforma <strong>GitHub</strong>
-        (on podrem allotjar el codi).
-        També instal·larem el navegador web <strong>Firefox</strong>, i el 
-        servidor web <strong>Apache</strong> (que instal·larem
-        dintre d'un contenidor utilitzant <strong>LinuxContainers</strong>).
-    </tldr>
-
-    <warn>En aquest curs utilitzarem el sistema operatiu 
-        <a href="https://ubuntu.com">Ubuntu 20.04</a>. Si no el tens 
-        instal·lat, el pots utilitzar en una màquina virtual.</warn>
+        <tldr>
+            Començarem la pràctica instal·lant l'editor de text 
+            <strong>Visual Studio Code</strong>, 
+            que ens permetrà editar el codi HTML, i també interactuar amb la 
+            plataforma <strong>GitHub</strong>
+            (on podrem allotjar el codi).
+            També instal·larem el navegador web <strong>Firefox</strong>, i el 
+            servidor web <strong>Apache</strong> (que instal·larem
+            dintre d'un contenidor utilitzant <strong>LinuxContainers</strong>).
+        </tldr>
     
-</section>
+        <warn>En aquest curs utilitzarem el sistema operatiu 
+            <a href="https://ubuntu.com">Ubuntu 20.04</a>. Si no el tens 
+            instal·lat, el pots utilitzar en una màquina virtual.</warn>
+    </abstract>
+</header>
 
 <section>
     <h2>Editor de text</h2>
