--- a/javatutorial/1/index.html
+++ b/javatutorial/1/index.html
@@ -381,7 +381,7 @@
     
     <work>
         <p> Ara que has aprés l'anatomia bàsica d'un programa Java, prova a fer aquest exercici:
-            <a href="https://www.hackerrank.com/contests/dam-m3/challenges/einstein">Einstein</a>
+            <a href="https://www.hackerrank.com/contests/dam-m3/challenges/einstein">Cita Einstein</a>
         </p>
     </work>
 </section>
