--- a/javatutorial/1/index.html
+++ b/javatutorial/1/index.html
@@ -143,12 +143,12 @@
     <quizz>
         <question match>
             <statement>Emparella els tipus de literals</statement>
-            <o>String</o>   <o><m>"464531######0207"</m></o>
-            <o>Enter</o>   <o><m>100_000_000</m></o>
-            <o>Caracter</o>   <o><m>'H'</m></o>
-            <o>Booleà</o>   <o><m>false</m></o>
-            <o>Decimal</o>   <o><m>1.75f</m></o>
-            <o>Literal invàlid</o>   <o><m>'text'</m></o>
+            <o>String</o>   <o>"464531######0207"</o>
+            <o>Enter</o>   <o>100_000_000</o>
+            <o>Caracter</o>   <o>'H'</o>
+            <o>Booleà</o>   <o>false</o>
+            <o>Decimal</o>   <o>1.75f</o>
+            <o>Literal invàlid</o>   <o>'text'</o>
         </question>
 
         <question single>
