--- a/javatutorial/1/index.html
+++ b/javatutorial/1/index.html
@@ -78,6 +78,12 @@
         punt <w>.</w> i afegirem una <w>f</w> al final. Per exemple:
     <w>3.14f</w>, <w>0.123f</w>, <w>100.5f</w></p>
 
+    <p>Si la part decimal d'un número és <w>.0</w> no és necessari posar-ho. 
+    És a dir, és el mateix <w>100.0f</w> que <w>100f</w>.</p>
+
+    <p>En els decimals també podem utilitzar guins baixos <w>_</w> per a separar dígits.
+    Per exemple: <w>10_000_000.75f</w>.</p>
+
     <info>
         <p>
             Java també permet literals decimals sense la terminació <w>f</w>, 
