--- a/javatutorial/1/index.html
+++ b/javatutorial/1/index.html
@@ -81,7 +81,7 @@
     <p>Si la part decimal d'un número és <w>.0</w> no és necessari posar-ho. 
     És a dir, és el mateix <w>100.0f</w> que <w>100f</w>.</p>
 
-    <p>En els decimals també podem utilitzar guins baixos <w>_</w> per a separar dígits.
+    <p>En els decimals també podem utilitzar guions baixos <w>_</w> per a separar dígits.
     Per exemple: <w>10_000_000.75f</w>.</p>
 
     <info>
