--- a/javatutorial/1/index.html
+++ b/javatutorial/1/index.html
@@ -599,6 +599,7 @@
             <br>
             <a href="https://www.hackerrank.com/contests/dam-m3/challenges/jota-amb-asteriscs">Jota amb asteriscs</a>
             <br>
+            Bonus track:
             <a href="https://www.hackerrank.com/contests/dam-m3/challenges/a-hello-world">Hello World ASCII-art</a>
         </p>
     </challenge>
