--- a/javatutorial/quizz.html
+++ b/javatutorial/quizz.html
@@ -4,6 +4,34 @@
 <link rel="stylesheet" href="/sofi/css/estil.css">
 
 <quizz>
+    <question text>
+        <statement>
+            <p>Donat el següent codi:</p>
+            <code java>
+                int a = 10;
+                int b = 12;
+                int c = b;
+                int d = a;
+                int e = c;
+            </code>    
+            <p>Introdueix el valor de la variable <w>e</w>.</p>
+        </statement>
+
+        <o>12</o>    
+    </question>
+
+    <question text>
+        <statement>Escriu el valor de cada variable, després de que s'executi cada sentència</statement>
+
+        <table>
+            <tr> <th></th> <th><w>a</w></th> <th>b</th> <th>c</th>  </tr>
+            <tr><td><w>int a = 0;</w></td> <td><o>0</o></td> <td></td><td></td></tr>
+            <tr><td><w>int b = 0;</w></td> <td><o>0</o></td> <td><o>0</o></td><td></td></tr>
+            <tr><td><w>a = 2;</w></td> <td><o>2</o></td> <td><o>0</o></td><td></td></tr>
+            <tr><td><w>int c = b;</w></td> <td><o>2</o></td> <td><o>0</o></td><td><o>0</o></td></tr>
+        </table>
+    </question>
+    
     <question single>
         <statement>
             <p>Què imprimirà el següent codi?</p>
