--- a/inicihtml/index.html
+++ b/inicihtml/index.html
@@ -1,27 +1,36 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<script src="https://cdn.jsdelivr.net/npm/clipboard@2.0.6/dist/clipboard.min.js"></script>
 <script type="module" src="/sofi/js/script.js"></script>
 <link rel="stylesheet" href="/sofi/css/estil.css">
 
 
 <header>
-    <h1>Pràctica 2: Inici en HTML</h1>
+    <h1>Inici en HTML</h1>
 
-    <resum>En aquesta pràctica començarem amb els fonaments 
-        bàsics de l'HTML.</resum>
+    <abstract>
+        <resum>En aquesta pràctica començarem amb els fonaments 
+            bàsics de l'HTML.</resum>
 
-    <p>Segueix aquests dos tutorials de la 
-        <strong>Mozilla Developer Network</strong>:</p>
-   
-    <ul>
-        <li><a href="https://developer.mozilla.org/ca/docs/Learn/HTML/Introducci%C3%B3_al_HTML/Getting_started">
-        Inici en HTML
-        </a>
-        <li><a href="https://developer.mozilla.org/ca/docs/Learn/HTML/Introducci%C3%B3_al_HTML/Qu%C3%A8_hi_ha_en_el_head_Metadades_en_HTML">
-        Què hi ha en el head? Metadades en HTML
-        </a>
-    </ul>
+        <p>Segueix aquests dos tutorials de la 
+            <strong>Mozilla Developer Network</strong>:</p>
+    
+        <ul>
+            <li>
+                <p>
+                    <a href="https://developer.mozilla.org/ca/docs/Learn/HTML/Introducci%C3%B3_al_HTML/Getting_started">
+                    Inici en HTML
+                    </a>
+                </p>
+            </li>
+            <li>
+                <p>
+                    <a href="https://developer.mozilla.org/ca/docs/Learn/HTML/Introducci%C3%B3_al_HTML/Qu%C3%A8_hi_ha_en_el_head_Metadades_en_HTML">
+                    Què hi ha en el head? Metadades en HTML
+                    </a>
+                </p>
+            </li>
+        </ul>
+    </abstract>
 </header>
 <section>
     <h2>Desenvolupament de la pràctica</h2>
@@ -158,5 +167,10 @@ info.onclick = () => {
     </ul>
 
     <h3>Exemple</h3>
+
+    <h4>Sense CSS</h4>
+    <img src="img/nocss.png">
+   
+    <h4>Amb CSS</h4>
     <img src="img/image8.png">
 </section>
