--- a/chatbot/index.html
+++ b/chatbot/index.html
@@ -7,18 +7,32 @@
 <nav></nav>
 <header>
     <h1>Projecte: ChatBOT</h1>
+    <abstract>
+        <p>Els assistents personals digitals, ajuden a la gent a conduir cotxes,
+            planificar-se el dia, fer compres online. En certa manera, són versions simplificades
+            d'intel·ligència artificial amb les quals pots parlar.
+        </p>
+        <p>En aquest projecte, desenvoluparàs pas a pas un simple bot amb que t'ajudarà a estudiar
+            programació.
+        </p>    
+    </abstract>
 </header>
 
 <section>
-    <p>Els assistents personals digitals, ajuden a la gent a conduir cotxes,
-        planificar-se el dia, fer compres online. En certa manera, són versions simplificades
-        d'intel·ligència artificial amb les quals pots parlar.
-    </p>
-    <p>En aquest projecte, desenvoluparàs pas a pas un simple bot amb que t'ajudarà a estudiar
-        programació.
-    </p>
-</section>
+    <h2>Crea el projecte</h2>
+    <p>Comença creant un projecte nou a IntelliJ, en el qual desenvoluparàs el ChatBOT:</p>
 
+    <p>Selecciona <menuoption>Java</menuoption> com a tipus de projecte:</p>
+    <img src="img/cb1.png">
+
+    <p>Marca l'opcio <menuoption>Create project from template</menuoption></p>
+    <img src="img/cb2.png">
+
+    <p>Posa-li el nom <name>ChatBot</name> al projecte:</p>
+    <img src="img/cb3.png">
+
+    Ara ja pots començar a programar el BOT a l'arxiu <file>Main.java</file>
+</section>
 <section>
     <h2>Etapa 1/4: Hola! Com et dius?</h2>
     <p>A la primera etapa, has d'escriure un bot que mostri una salutació, el seu nom i la seva 
