--- a/javatutorial/2/index.html
+++ b/javatutorial/2/index.html
@@ -1036,9 +1036,7 @@
         <p><a href="https://www.hackerrank.com/contests/dam-m3/challenges/a-hello-you">Hello you</a></p>
         <p><a href="https://www.hackerrank.com/contests/dam-m3/challenges/cada-paraula-a-una-linia">Cada paraula a una línia</a></p>
         <p><a href="https://www.hackerrank.com/contests/dam-m3/challenges/contractar-un-xef">Contractar un xef</a></p>
-        <p><a href="https://www.hackerrank.com/contests/dam-m3/challenges/arxius-de-codi-font">Arxius de codi font</a></p> 
-        <p><a href=""></a></p>
-        <p><a href=""></a></p>
-        
+        <p><a href="https://www.hackerrank.com/contests/dam-m3/challenges/carta-formal">Carta formal</a></p>
+        <p><a href="https://www.hackerrank.com/contests/dam-m3/challenges/arxius-de-codi-font">Arxius de codi font</a></p>         
     </challenge>
 </section>
