--- a/javatutorial/2/index.html
+++ b/javatutorial/2/index.html
@@ -8,7 +8,14 @@
 <header>
     <h1>Escanejar variables</h1>
 
-    <h2></h2>
+    <abstract>
+        <p>En aquesta activitat aprendràs a fer programes interactius, que demanen 
+            dades i després les utilitzen.
+        </p>
+        <p>Aprendràs:</p>
+        <check>Què són les variables i com utilitzar-les</check>
+        <check>Com obtenir dades de l'entrada estàndard i guardar-les en variables</check>
+    </abstract>
 </header>
 
 <section>
