--- a/javatutorial/1/index.html
+++ b/javatutorial/1/index.html
@@ -36,6 +36,7 @@
     <challenge>
         <p>De moment no és necessari que comprenguis com funciona 
             aquest codi. Així i tot, prova a resoldre aquest exercici:
+            <br>
             <a href="https://www.hackerrank.com/contests/dam-m3/challenges/hello-name-3">Hola, &lt;NOM&gt;!</a>
         </p>
     </challenge>
@@ -323,8 +324,10 @@
     </p>
 
     <warn>
-        Important, que <strong>Hello, World!</strong> no és una paraula-clau o un identificador; és 
+        <p>
+        Important!, <string>"Hello, World!"</string> no és una paraula-clau o un identificador; és 
         solament un text per a ser imprimit.
+        </p>
     </warn>
 
     <!--
@@ -387,6 +390,7 @@
     
     <work>
         <p> Ara que has aprés l'anatomia bàsica d'un programa Java, prova a fer aquest exercici:
+            <br>
             <a href="https://www.hackerrank.com/contests/dam-m3/challenges/einstein">Cita Einstein</a>
         </p>
     </work>
@@ -593,8 +597,8 @@
     </quizz>
 
     <challenge>
-        <p>Resol aquests problemes:</p>
-        <p>
+        <p>Resol aquests problemes:
+            <br>
             <a href="https://www.hackerrank.com/contests/dam-m3/challenges/de-0-a-4">De 0 a 4</a>
             <br>
             <a href="https://www.hackerrank.com/contests/dam-m3/challenges/jota-amb-asteriscs">Jota amb asteriscs</a>
